# CorridorKey-Engine

./: .gitignore  CONTRIBUTING.md  CorridorKey_DRAG_CLIPS_HERE_local.bat  CorridorKey_DRAG_CLIPS_HERE_local.sh  Install_CorridorKey_Windows.bat  Install_GVM_Windows.bat  Install_VideoMaMa_Windows.bat  README.md  RunGVMOnly.sh  RunInferenceOnly.sh  benchmark_4k_vram.py  clip_manager.py  corridorkey_cli.py  launch.bat  launch.sh  pyproject.toml  test_vram.py
.github/workflows/: ci.yml
CorridorKeyModule/: README.md  backend.py  base_engine.py  constants.py  engine_factory.py  inference_engine.py  optimization_config.py  optimized_engine.py
CorridorKeyModule/core/: color_utils.py  model_transformer.py  optimized_model.py
alpha_generators/birefnet/: __init__.py  wrapper.py
alpha_generators/gvm/: wrapper.py
alpha_generators/videomama/: inference.py
backend/: __init__.py  async_pipeline.py  clip_state.py  errors.py  ffmpeg_tools.py  frame_io.py  job_queue.py  project.py  service.py  validators.py
birefnet_core/: __init__.py  wrapper.py
ck_engine/: __init__.py  async_pipeline.py  cli.py  client.py  clip_state.py  config.py  errors.py  ffmpeg_tools.py  frame_io.py  model_manager.py  natural_sort.py  path_utils.py  project.py  settings.py  validators.py
ck_engine/api/: __init__.py  errors.py  events.py  frames.py  types.py
ck_engine/engine/: __init__.py  dispatcher.py  event_bus.py  job_runner.py  model_pool.py  server.py
ck_engine/generators/: __init__.py  base.py
ck_engine/generators/birefnet/: __init__.py  wrapper.py
ck_engine/generators/gvm/: LICENSE.md  README.md  wrapper.py
ck_engine/generators/gvm/gvm/pipelines/: pipeline_gvm.py
ck_engine/generators/videomama/: LICENSE.md  __init__.py  inference.py  wrapper.py
ck_engine/pipeline/: __init__.py  generate.py  inference.py
ck_engine/transport/: __init__.py  stdio.py  tcp.py
docs/: BENCHMARK_RESULTS.md  LLM_HANDOVER.md  VRAM_OPTIMIZATIONS.md  architecture.md  async_pipeline_flowchart.md  cli_reference.md  engine_protocol.md  plan_pipeline_tuning.md
docs/examples/: stdio_client.py  tcp_client.py
tears_of_steel_test/: download_frames.py  generate_alpha_hints.py
tests/: conftest.py  test_api.py  test_async_pipeline.py  test_backend.py  test_birefnet_wrapper.py  test_cli.py  test_client.py  test_clip_manager.py  test_clip_state.py  test_color_utils.py  test_device_utils.py  test_e2e_protocol.py  test_e2e_workflow.py  test_engine.py  test_engine_factory.py  test_gamma_consistency.py  test_generate_alpha_hints.py  test_gvm_wrapper.py  test_imports.py  test_inference_engine.py  test_job_runner.py  test_mlx_smoke.py  test_optimization_config.py  test_optimized_model.py  test_selection_io.py  test_settings_io.py  test_transport.py  test_validators.py
tools/: CorridorKey_DRAG_CLIPS_HERE_local.sh  Install_CorridorKey_Windows.bat  Install_GVM_Windows.bat  Install_VideoMaMa_Windows.bat  RunBenchmark.bat  RunBenchmark.sh  RunGVMOnly.sh  RunInferenceOnly.sh  cli.bat  cli.sh  user_settings.toml
tools/benchmarks/: benchmark_4k_vram.py  download_frames.py  generate_alpha_hints.py
tui/: __init__.py  app.py  client.py  gpu_monitor.py  pipeline_bridge.py  selection_io.py  settings_io.py  styles.tcss  theme.py
tui/screens/: __init__.py  clip_manager.py  generate_mattes.py  global_settings.py  inference.py  inference_settings_editor.py
tui/widgets/: __init__.py  clip_tree.py  gpu_status.py  header.py  progress_panel.py  project_browser.py
